# rpg-based-simulation

./: .gitignore  LICENSE  Makefile  README.md  make.bat  profile.prof  profile2.prof  profile3.prof  profile4.prof  profile_final.prof  pyproject.toml  replay.json  requirements.txt
docs/: ai_and_town.md  ai_behaviors.md  ai_system.md  api_reference.md  architecture.md  attributes_and_classes.md  buildings_and_economy.md  buildings_economy.md  class_system.md  combat_and_progression.md  combat_leveling.md  design_patterns.md  enemy_tiers.md  entities_and_factions.md  faction_system.md  frontend.md  inventory_equipment.md  items_and_inventory.md  minimap.md  performance-report-api-payload.md  performance-report-epic16.md  performance-report-rendering.md  proposal_v2.txt  rpg_systems.md  terrains_resources.md  world_generation.md  world_zones.md
frontend/: index.html  index.html.bak  package-lock.json  package.json  vite.config.ts
scripts/: profile_api_payload.py  profile_simulation.py
src/: __init__.py  __main__.py  config.py
tests/: test_api_payload.py  test_attributes.py  test_classes.py  test_combat.py  test_combat_arena_e2e.py  test_conflict_resolver.py  test_deterministic_replay.py  test_difficulty_scaling.py  test_enriched_events.py  test_entity_builder.py  test_equipment_enhance.py  test_goals.py  test_inventory_goals.py  test_loot_scaling.py  test_metadata.py  test_mob_leash.py  test_pathfinding.py  test_quests.py  test_ranged_combat.py  test_region_events.py  test_regions.py  test_skill_scaling.py  test_subsystem_ticks.py  test_terrain_detail.py  (+2 more)
(+125 files in other folders)
